search section fixed

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <div class="container">
-        <form action="https://www.google.com/search" method="GET">
-            <input type="text" name="q" placeholder="Google Search"><br>
-            <input type="submit" value="Search">
-        </form>
+        <div class="search">
+            <form action="https://www.google.com/search" method="GET">
+                <input type="text" name="q" placeholder="Google Search">
+                <input type="submit" value="Search" class="search-btn">
+            </form>
+        </div>
         <div class="ad-mockup">
             This is a mockup add
         </div>
